--- a/Socks/View/StartPage.xaml
+++ b/Socks/View/StartPage.xaml
@@ -1,22 +1,116 @@
-<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:local="clr-namespace:Socks"
-             x:Class="Socks.View.StartPage">
-   
+<?xml version="1.0" encoding="utf-8"?>
+<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:local="clr-namespace:Socks" x:Class="Socks.View.StartPage">
     <ContentPage.Title>Носки</ContentPage.Title>
     <ContentPage.Padding>
         <OnPlatform x:TypeArguments="Thickness" iOS="0, 20, 0, 30" />
     </ContentPage.Padding>
-   <!-- <ContentPage.BackgroundColor>#39212e</ContentPage.BackgroundColor>-->
+    <!-- <ContentPage.BackgroundColor>#39212e</ContentPage.BackgroundColor>-->
+    <Page.Resources>
+        <ResourceDictionary>
+            <Color x:Key="buttonBgColor">#39212e</Color>
+            <Color x:Key="buttonBorderColor">#311825</Color>
+            <Color x:Key="buttonTextColor">#F8E2EE</Color>
+            <Color x:Key="sliderBgColor">#8E3C6B</Color>
+            <Style x:Key="SockButtonStyle" TargetType="Button">
+                <Setter Property="FontSize"       Value="Small"   />
+                <Setter Property="FontAttributes" Value="Bold" />
+                <Setter Property="BackgroundColor" Value="{DynamicResource buttonBgColor}" />
+                <Setter Property="BorderColor" Value="{DynamicResource buttonBorderColor}" />
+                <Setter Property="TextColor" Value="{DynamicResource buttonTextColor}" />
+                <Setter Property="VerticalOptions" Value="Fill" />
+                <Setter Property="HorizontalOptions" Value="Fill" />
+                <Setter Property="BorderWidth" Value="1" />
+                <Setter Property="BorderRadius" Value="1" />
+                <Setter Property="Margin" Value="0" />
+                <Setter Property="ContentLayout" Value="Top,1" />
+            </Style>
+            <Style x:Key="FrameStyle" TargetType="Frame">
+                <Setter Property="BackgroundColor" Value="{DynamicResource buttonBgColor}" />
+                <Setter Property="OutlineColor" Value="{DynamicResource buttonBorderColor}" />
+                <Setter Property="Margin" Value="0" />
+                <Setter Property="Padding" Value="4" />
+                <Setter Property="HasShadow" Value="True" />
+                <Setter Property="CornerRadius" Value="10"/>
+            </Style>
+            <Style x:Key="LabelStyle" TargetType="Label">
+                <Setter Property="TextColor" Value="{DynamicResource buttonTextColor}" />
+                <Setter Property="FontSize"       Value="Small"   />
+                <Setter Property="HorizontalOptions"       Value="Center"   />
+                <Setter Property="VerticalOptions"       Value="Start"   />
+                <Setter Property="HorizontalTextAlignment"       Value="Center"   />
+                <Setter Property="VerticalTextAlignment"       Value="Start"   />
+             </Style>
+        </ResourceDictionary>
+    </Page.Resources>
+
     <ContentPage.BackgroundImage>
     startpage_bg.png
     </ContentPage.BackgroundImage>
+
     <ContentPage.Content>
+        <Grid HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" Padding="10, 20, 10,10" Margin="0" ColumnSpacing="15" RowSpacing="15" AbsoluteLayout.LayoutFlags="All">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="6*" />
+                <ColumnDefinition Width="6*" />
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="2*" />
+                <RowDefinition Height="2*" />
+                <RowDefinition Height="*" />
+                <RowDefinition Height="*" />
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
+            <Button Style="{DynamicResource SockButtonStyle}" 
+                    Image="startpage_0013_Nosok35_40.png" 
+                    Text="36-40" 
+                    Grid.Column="1" Grid.Row="0" 
+                    Command="{Binding CountWomanSockCommand}" x:Name="button_35_40">
+            </Button>
+            <Button Style="{DynamicResource SockButtonStyle}" 
+                Image="startpage_0012_Nosok25_30.png" 
+                    Text="25-30" 
+                    HorizontalOptions="Fill" 
+                    Grid.Column="2" Grid.Row="0" 
+                    Command="{Binding CountKidSockCommand}" x:Name="button_25_30">
+            </Button>
+            <Button Style="{DynamicResource SockButtonStyle}"  
+                Image="startpage_0008_Nosok41_45.png" Text="41-45" 
+                    Grid.Column="2" Grid.Row="1" 
+                Command="{Binding CountManSockCommand}" x:Name="button_41_45">
+            </Button>
+            <Button Style="{DynamicResource SockButtonStyle}" 
+                    Image="startpage_0011_Nosok31_35.png" Text=" 31-35 " 
+                    Grid.Column="1" Grid.Row="1" 
+                    Command="{Binding CountYoungerSockCommand}" x:Name="button_31_35">
+            </Button>
+            <Frame Style="{DynamicResource FrameStyle}"
+                Grid.Column="0" Grid.Row="3" Grid.ColumnSpan="4" 
+                x:Name="FramePlot">
+                <StackLayout Orientation=" Vertical">
+                    <Slider Maximum="100" Minimum="5" HorizontalOptions="FillAndExpand"
+                            BackgroundColor="{DynamicResource sliderBgColor}" Value="{Binding PlotX}" />
+                    <Label Style="{DynamicResource LabelStyle}" Text="{Binding textPlotX}" />
+                </StackLayout>
+            </Frame>
+            <Frame Style="{DynamicResource FrameStyle}" 
+                   Grid.Column="0" Grid.Row="4" Grid.ColumnSpan="4" 
+                 x:Name="FramePlotVert">
+                <StackLayout Orientation=" Vertical" >
+                    <Slider  HorizontalOptions="FillAndExpand" Maximum="60" Minimum="5" 
+                             BackgroundColor="{DynamicResource sliderBgColor}" Value="{Binding PlotY}" />
+                    <Label  Style="{DynamicResource LabelStyle}" Text="{Binding textPlotY}"
+                              />
+                </StackLayout>
+            </Frame>
+        </Grid>
+    </ContentPage.Content>
+    <!-- <ContentPage.Content>
         <AbsoluteLayout Padding="0" Margin="0" >
             
             
-           <Grid AbsoluteLayout.LayoutBounds="0.7,0.5, 0.7, 0.75" HorizontalOptions="Center" 
+           <Grid AbsoluteLayout.LayoutBounds="0.7,0.5, 0.7, 0.8" HorizontalOptions="Center" 
                  VerticalOptions="Start" Padding ="0, 20, 0, 0" Margin="0" ColumnSpacing="15" 
                  RowSpacing="15" AbsoluteLayout.LayoutFlags="All">
                 <Grid.ColumnDefinitions>
@@ -30,14 +124,15 @@
 
                 </Grid.RowDefinitions>
                
-                        <Button Scale="1" Image="startpage_0013_Nosok35_40.png" Text="36-40"  HorizontalOptions="Fill"
+                        <Button Image="startpage_0013_Nosok35_40.png"  Text="36-40"  HorizontalOptions="Fill"
                                 VerticalOptions="Fill" ContentLayout="Top,1" TextColor="#F8E2EE"  
                     Grid.Column="0" Grid.Row="0" BackgroundColor="#39212e" BorderColor="#311825"
                                 BorderWidth="4" BorderRadius="4" Margin="0" FontSize="Small"
                                  Command="{Binding CountWomanSockCommand}" 
                                 x:Name="button_35_40"></Button>
                   
-                        <Button Image="startpage_0012_Nosok25_30.png" Text="25-30" HorizontalOptions="Fill" VerticalOptions="Fill" ContentLayout="1,1" TextColor="#F8E2EE" 
+                        <Button Image="startpage_0012_Nosok25_30.png" Text="25-30" HorizontalOptions="Fill" VerticalOptions="Fill" 
+                                ContentLayout="1,1" TextColor="#F8E2EE" 
                      Grid.Column="1" Grid.Row="0" BackgroundColor="#39212e" BorderColor="#311825" 
                                 BorderWidth="4" BorderRadius="4" Margin="0"  FontSize="Small"
                                  Command="{Binding CountKidSockCommand}" x:Name="button_25_30"></Button>
@@ -47,7 +142,7 @@
                         BorderWidth="4" BorderRadius="4" Margin="0"  FontSize="Small"
                          Command="{Binding CountManSockCommand}" x:Name="button_41_45"></Button>
                    
-                        <Button Image="startpage_0011_Nosok31_35.png" Text="31-35" HorizontalOptions="Fill" VerticalOptions="Fill" ContentLayout="1,1" TextColor="#F8E2EE"  
+                        <Button Image="startpage_0011_Nosok31_35.png" Text=" 31-35 " HorizontalOptions="Fill" VerticalOptions="Fill" ContentLayout="1,1" TextColor="#F8E2EE"  
                      Grid.Column="0" Grid.Row="1" BackgroundColor="#39212e" BorderColor="#311825" 
                                 BorderWidth="4" BorderRadius="4"  Margin="0"  FontSize="Small"
                                  Command="{Binding CountYoungerSockCommand}" x:Name="button_31_35"></Button>
@@ -67,16 +162,19 @@
 
                 </StackLayout>
             </Frame>
-            <Frame AbsoluteLayout.LayoutBounds="1.3,0.5, 1.5, 0.12" AbsoluteLayout.LayoutFlags="All" 
+
+            <Frame  AbsoluteLayout.LayoutFlags="All" AbsoluteLayout.LayoutBounds= "1.3,0.5, 1.5, 0.12"  
                    BackgroundColor="#39212e" Margin="1" Padding="4" HasShadow="True" OutlineColor="#39212E"
                        CornerRadius="10" Scale="0.85" Rotation="270" x:Name="FramePlotVert">
-                       <StackLayout Orientation=" Vertical">
+
+                      
+                <StackLayout Orientation=" Vertical">
                
                     <Slider Maximum="60" Minimum="5" BackgroundColor="#8E3C6B"
                 Value="{Binding PlotY}" />
                     <Label Text="{Binding textPlotY}" FontSize="Small" TextColor="#F8E2EE"   
-                           HorizontalOptions="Center" VerticalOptions="Center"
-                           HorizontalTextAlignment="Center" VerticalTextAlignment="Center"/>
+                           HorizontalOptions="Center" VerticalOptions="Start"
+                           HorizontalTextAlignment="Center" VerticalTextAlignment="Start"/>
                 
                 </StackLayout>
             </Frame>
@@ -84,4 +182,5 @@
         </AbsoluteLayout>
 
     </ContentPage.Content>
+-->
 </ContentPage>
